# ttcc-rl

./: .gitignore  COT_GENERATION_RUNBOOK.md  README.md  RUNBOOK.md  TOMORROW.md  pyproject.toml
docs/: 01_method.md  02_experiment_configs.md  03_conditional_results.md  04_final_report.md  05_evaluation_protocol_v3.md  06_config_audit.md  07_recipe_gaps.md  08_session_journal_20260522.md  09_session_journal_20260522_afternoon.md  10_milestone_report.md  11_milestone_strategy_and_progress.md  overnight_runlog.md
patches/: swift_n_try_fetch_30.patch
scripts/: README.md  cot_distill.py  eval_one.py  grpo_signal.py  infer_trained.sh  prepare_dataset.py  prepare_dataset_nocot.py  status.sh  test_hypotheses.py
scripts/analysis/: analyze_h1_ckpt_comparison.py  analyze_v38.py  filter_long_rows.py  plot_v38_gt_vs_pred.py
scripts/bench/: bench_sft.sh  chain_T1c_T3a.sh  chain_after_T4b_T5.sh  launch_T1b.sh  launch_T1c.sh  launch_T3a.sh  launch_T4.sh  launch_T4b.sh  launch_T5.sh  launch_T6a_sweep.sh  launch_T6b.sh  zero3_overlap.json
scripts/data/: build_overfit8.py  build_videoswap.py  check_hf.sh  cot_distill_oversize.py  cot_distill_v3_gemini.py  filter_val.py  finalize_and_push.sh  hf_push.py  merge_and_push.sh  profile_tokens.py  profile_tokens_v2.py  push_final.sh  push_hf.sh  qc_clean.sh  qc_v3.sh
scripts/diagnostic/: diag1_variance.py  diag2_trainset_compare.py  diag3_infer_pt.sh  diag4_per_duration.py  diag5_compare.py  run_diag2.sh
scripts/infer/: h1_v38_ckpt50_run.sh  infer_v38_ckpt50.sh  infer_v38_ckpt80.sh
scripts/overnight/: overnight_orchestrator.sh  (+3 more)
(+46 files in other folders)
