[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ttcc-rl"
version = "0.1.0"
description = "SFT + GRPO RL pipeline for TTCC retention-curve prediction"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pyarrow>=15",
    "pandas>=2",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ttcc_rl = ["py.typed"]
